objects/Download_Log__c.object
<CustomObject>
    <fields>
        <fullName>Downloaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Downloaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Download_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tool_Downloaded__c</fullName>
        <formula>IF ( OR ( ISBLANK(Type__c), Type__c = &apos;Log&apos; ),
 &apos;LFMT&apos;,
 Type__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tool Downloaded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Download Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Downloaded_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Download Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Download Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>